fix: FormSubmit real CV delivery, admin save feedback, Arabic Playfair logo, sitemap footer

--- a/ar.html
+++ b/ar.html
@@ -149,7 +149,7 @@ img{max-width:100%;display:block}
 /* ── FOOTER ── */
 .footer{background:#060F1E;padding:52px 0 28px}
 .ftg{display:grid;grid-template-columns:1.4fr 1fr 1fr 1fr;gap:36px;margin-bottom:44px}
-.flb-name{font-family:var(--fh);font-size:20px;font-weight:800;color:#fff;margin-bottom:10px}
+.flb-name{font-family:'Playfair Display',serif;font-size:20px;font-weight:800;color:#fff;margin-bottom:10px}
 .flb-name em{color:var(--gold);font-style:normal}
 .flb p{font-size:13px;color:rgba(255,255,255,.35);line-height:1.75;margin-bottom:16px}
 .flci{display:flex;align-items:center;gap:8px;font-size:13px;color:rgba(255,255,255,.4);margin-bottom:8px;transition:color var(--t)}
@@ -187,7 +187,7 @@ img{max-width:100%;display:block}
   .cta-t{font-size:28px}
   .stats-grid{grid-template-columns:1fr 1fr}
 }
-.nav-brand .brand-name,.footer-brand span{font-family:'Playfair Display',serif!important}
+.nav-brand .brand-name,.flb-name{font-family:'Playfair Display',serif!important}
 </style>
 <script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://staffona.com/ar#page","name":"استشارات موارد بشرية في مصر | ستافونا","description":"ستافونا — شريكك المتخصص في إدارة الموارد البشرية والرواتب والتوظيف في مصر.","url":"https://staffona.com/ar","inLanguage":"ar","publisher":{"@type":"Organization","name":"Staffona","url":"https://staffona.com"}},{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"الرئيسية","item":"https://staffona.com/ar"}]}]}</script>
 </head>
@@ -522,7 +522,7 @@ img{max-width:100%;display:block}
       </div>
     </div>
     <div class="ftbtm">
-      <div class="ftcopy">© 2026 Staffona. جميع الحقوق محفوظة.</div>
+      <div class="ftcopy">© 2026 Staffona. جميع الحقوق محفوظة.<a href="sitemap.xml" style="color:rgba(255,255,255,.4);font-size:12px;margin-right:8px">Sitemap</a></div>
       <div class="lang-switch">
         <span>اللغة:</span>
         <span class="active-lang">العربية</span>
