--- a/laws.html
+++ b/laws.html
@@ -4,7 +4,15 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Egyptian Labor Laws &amp; HR Guides | Staffona</title>
 <meta name="description" content="Plain-language guides to Egyptian labor law, social insurance, income tax, and HR compliance. Free reference for employers and HR professionals.">
-<link rel="canonical" href="https://www.staffona.com/laws"><link rel="icon" type="image/png" href="Favicon.png">
+<link rel="canonical" href="https://staffona.com/laws">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://staffona.com/laws">
+<meta property="og:title" content="Egyptian Labor Laws & HR Legislation Reference | Staffona">
+<meta property="og:description" content="Key Egyptian employment laws, labor code summaries, and official government references for HR and legal compliance.">
+<meta property="og:image" content="https://staffona.com/og-banner.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<link rel="icon" type="image/png" href="Favicon.png">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG3DEQLHJF"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-BG3DEQLHJF');</script>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +43,7 @@
 @media(max-width:900px){.law-grid{grid-template-columns:1fr 1fr}}
 @media(max-width:600px){.law-grid{grid-template-columns:1fr}}
 </style>
+<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Article","@id":"https://staffona.com/laws#article","headline":"Egyptian Labor Laws & HR Legislation Reference","description":"Key Egyptian employment laws, labor code summaries, and official government references for HR compliance \u2014 updated for 2026.","url":"https://staffona.com/laws","author":{"@type":"Organization","name":"Staffona","url":"https://staffona.com"},"publisher":{"@type":"Organization","name":"Staffona","url":"https://staffona.com","logo":{"@type":"ImageObject","url":"https://staffona.com/Logo.png"}},"dateModified":"2026-02-28","image":"https://staffona.com/og-banner.png"},{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://staffona.com"},{"@type":"ListItem","position":2,"name":"Laws & Guides","item":"https://staffona.com/laws"}]}]}</script>
 </head>
 <body>
 
@@ -51,6 +60,7 @@
     </ul>
     <div class="nav-r">
       <a href="mailto:info@staffona.com" class="nav-email">info@staffona.com</a>
+            <a href="ar.html" class="lang-btn" title="Arabic / العربية">🌐 AR</a>
       <button class="dm-btn" aria-label="Toggle dark mode"><svg class="dm-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg><svg class="dm-sun" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/></svg></button>
       <button class="btn btn-gold btn-sm" data-cal>Book Consultation</button>
       <button class="hbg" id="hbg" aria-label="Menu" aria-expanded="false" style="display:none"><span></span><span></span><span></span></button>
@@ -167,14 +177,55 @@
   </div>
 </div></section>
 
+
+<section class="sec" style="background:var(--off)">
+  <div class="w">
+    <div class="sh sh-c rv"><div class="lbl lbl-c">FAQ</div><h2 class="h2 h2-c">Egyptian Labor Law <span>FAQ</span></h2><p class="sub sub-c">Quick answers to the most common questions about employment law in Egypt.</p></div>
+    <div class="faq-wrap" style="max-width:720px;margin:40px auto 0">
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">What law governs employment in Egypt?</span></div>
+        <div class="faq-a"><p>Employment in Egypt is primarily governed by Labor Law No. 12 of 2003, supplemented by the Social Insurance Law (No. 79 of 1975 as amended), the Income Tax Law (No. 91 of 2005), and ministerial decrees. Staffona monitors all legislative changes and applies them immediately.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">What is the standard working week in Egypt?</span></div>
+        <div class="faq-a"><p>The legal maximum is 8 hours per day and 48 hours per week, excluding breaks. Most professional roles operate on a 5-day, 40-hour week by agreement. Ramadan hours are reduced to 6 per day for Muslim employees. Overtime must be compensated at 135% of the normal hourly rate.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">What are the public holidays in Egypt?</span></div>
+        <div class="faq-a"><p>Egypt has approximately 13 official public holidays per year, including New Year, Coptic Christmas, Revolution Day (Jan 25), Sinai Liberation Day, Labor Day, June 30 Revolution Day, Army Day, and variable Islamic holidays (Eid Al-Fitr, Eid Al-Adha, Islamic New Year, Prophet Birthday).</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">What is the sick leave entitlement in Egypt?</span></div>
+        <div class="faq-a"><p>Employees are entitled to paid sick leave when supported by a medical certificate. Duration depends on NOSI contribution history. Employers typically allow up to 6 months of sick leave before termination procedures may apply. NOSI provides sick pay benefits after a qualifying period.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">Are non-compete clauses enforceable in Egypt?</span></div>
+        <div class="faq-a"><p>Yes, when narrowly drafted. Egyptian courts enforce non-competes limited in geographic scope, duration (up to 1 to 2 years), and activity type. Overly broad clauses are regularly struck down. Staffona drafts enforceable restrictive covenants as part of its compliance advisory service.</p></div>
+      </div>
+    </div>
+  </div>
+</section>
+<style>
+.faq-item{border-bottom:1px solid var(--border)}
+.faq-q{padding:18px 0;display:flex;align-items:center;gap:14px;cursor:pointer;user-select:none}
+.faq-ic{width:24px;height:24px;border-radius:50%;background:var(--gold-pl);border:1px solid rgba(200,151,58,.25);display:flex;align-items:center;justify-content:center;flex-shrink:0;font-weight:700;font-size:15px;color:var(--gold);transition:transform .22s}
+.faq-item.open .faq-ic{transform:rotate(45deg)}
+.faq-qt{font-family:var(--fh);font-size:15px;font-weight:700;color:var(--text);flex:1}
+.faq-a{max-height:0;overflow:hidden;transition:max-height .35s ease,padding .3s}
+.faq-item.open .faq-a{max-height:240px;padding-bottom:18px}
+.faq-a p{font-size:14px;color:var(--sl);line-height:1.8}
+</style>
+<script>
+if(!window._sfFaq){window._sfFaq=true;document.addEventListener('click',function(e){var b=e.target.closest('.faq-q');if(!b)return;var i=b.closest('.faq-item'),w=i.closest('.faq-wrap'),o=i.classList.contains('open');w.querySelectorAll('.faq-item.open').forEach(function(x){x.classList.remove('open')});if(!o)i.classList.add('open');});}
+</script>
 <footer class="footer"><div class="w">
   <div class="ftg">
     <div class="flb"><a href="index.html"><img src="Logo.png" alt="Staffona" onerror="this.style.display='none';this.nextElementSibling.style.display='block'"><span class="flb-fb">Staff<em>ona</em></span></a><p>Egypt's trusted HR outsourcing and recruitment consultancy. Based in Alexandria.</p><a href="mailto:info@staffona.com" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>info@staffona.com</a></div>
-    <div><div class="flct">Services</div><ul class="flls"><li><a href="hr-outsourcing.html">HR Outsourcing</a></li><li><a href="payroll-egypt.html">Payroll</a></li><li><a href="recruitment-egypt.html">Recruitment</a></li><li><a href="compliance.html">Compliance</a></li></ul></div>
+    <div><div class="flct">Services</div><ul class="flls"><li><a href="hr-outsourcing.html">HR Outsourcing</a></li><li><a href="payroll-egypt.html">Payroll</a></li><li><a href="recruitment-egypt.html">Recruitment</a></li><li><a href="compliance.html">Compliance</a></li><li><a href="pricing.html">Pricing</a></li></ul></div>
     <div><div class="flct">Guides</div><ul class="flls"><li><a href="resources/hiring-guide.html">Hiring Guide</a></li><li><a href="resources/payroll-taxes.html">Payroll Tax</a></li><li><a href="resources/labor-law.html">Labor Law</a></li><li><a href="resources/termination-rules.html">Termination</a></li></ul></div>
     <div><div class="flct">Company</div><ul class="flls"><li><a href="about.html">About</a></li><li><a href="careers.html">Careers</a></li><li><a href="privacy.html">Privacy</a></li><li><a href="terms.html">Terms</a></li></ul></div>
   </div>
-  <div class="ftbtm"><div><div class="ftcopy">© 2026 Staffona. All rights reserved.</div><p class="ftdisc">Information on this page is for general guidance only and does not constitute legal advice. Always consult qualified legal counsel for specific employment law questions.</p></div><div class="ftbl"><a href="privacy.html">Privacy</a><a href="terms.html">Terms</a></div></div>
+  <div class="ftbtm"><div><div class="ftcopy">© 2026 Staffona. All rights reserved.</div><p class="ftdisc">Information on this page is for general guidance only and does not constitute legal advice. Always consult qualified legal counsel for specific employment law questions.</p></div><div class="ftbl"><a href="privacy.html">Privacy</a><a href="terms.html">Terms</a><a href="sitemap.xml">Sitemap</a></div></div>
 </div></footer>
 
 <div class="cookie" id="cookieBanner"><p>We use cookies to improve your experience. <a href="privacy.html">Learn more</a></p><div class="cb-btns"><button class="btn btn-gold btn-sm" id="cookieAccept">Accept</button><button style="background:transparent;border:1px solid rgba(255,255,255,.2);color:rgba(255,255,255,.4);border-radius:var(--r);padding:7px 15px;font-size:13px;cursor:pointer" id="cookieDecline">Decline</button></div></div>
