--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">KR</div>
             <div class="tst-info">
-              <div class="tst-name">Khalid Al-Rashidi</div>
-              <div class="tst-role">Head of Engineering · Gulf Tech Solutions</div>
+              <div class="tst-name">Khalid R.</div>
+              <div class="tst-role">Head of Engineering · Gulf-Based Employer</div>
               <div class="tst-country">🇦🇪 Dubai, UAE</div>
             </div>
             <div class="tst-badge">Managed Employment</div>
@@ -551,8 +551,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">NF</div>
             <div class="tst-info">
-              <div class="tst-name">Nadia Farouk</div>
-              <div class="tst-role">Finance Director · Cairo Distribution Group</div>
+              <div class="tst-name">Nadia F.</div>
+              <div class="tst-role">Finance Director · Cairo-Based Business</div>
               <div class="tst-country">🇪🇬 Cairo, Egypt</div>
             </div>
             <div class="tst-badge">Compliance &amp; Payroll</div>
@@ -564,8 +564,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">JT</div>
             <div class="tst-info">
-              <div class="tst-name">James Thornton</div>
-              <div class="tst-role">CEO · DataBridge Ltd</div>
+              <div class="tst-name">James T.</div>
+              <div class="tst-role">Managing Director · UK Tech Company</div>
               <div class="tst-country">🇬🇧 London, UK</div>
             </div>
             <div class="tst-badge">Recruitment + EOR</div>
@@ -577,8 +577,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">AS</div>
             <div class="tst-info">
-              <div class="tst-name">Ahmed Sami</div>
-              <div class="tst-role">Managing Director · Vertex Logistics</div>
+              <div class="tst-name">Ahmed S.</div>
+              <div class="tst-role">Managing Director · Alexandria Business</div>
               <div class="tst-country">🇪🇬 Alexandria, Egypt</div>
             </div>
             <div class="tst-badge">Payroll Management</div>
@@ -590,8 +590,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">TA</div>
             <div class="tst-info">
-              <div class="tst-name">Tariq Al-Omari</div>
-              <div class="tst-role">Operations Director · Al-Omari Holdings</div>
+              <div class="tst-name">Tariq A.</div>
+              <div class="tst-role">Operations Director · Saudi-Based Employer</div>
               <div class="tst-country">🇸🇦 Riyadh, Saudi Arabia</div>
             </div>
             <div class="tst-badge">HR Outsourcing</div>
