--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
     </ul>
     <div class="nav-r">
       <a href="mailto:info@staffona.com" class="nav-email">info@staffona.com</a>
+            <a href="ar.html" class="lang-btn" title="Arabic / العربية">🌐 AR</a>
       <button class="dm-btn" aria-label="Toggle dark mode">
         <svg class="dm-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
         <svg class="dm-sun" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/></svg>
@@ -108,7 +109,13 @@
   </div>
 </section>
 
-<!-- LEADERSHIP -->
+<!-- ═══════════════════════════════════════════════════════
+  FOUNDER PROFILE — TEMPORARILY HIDDEN
+  To restore: delete this comment block and uncomment the LEADERSHIP section below.
+  Search for: RESTORE_FOUNDER_PROFILE
+  ═══════════════════════════════════════════════════════ -->
+
+<!--RESTORE_FOUNDER_PROFILE
 <section class="sec" style="background:var(--off)">
   <div class="w">
     <div class="sh sh-c rv"><div class="lbl lbl-c">Leadership</div><h2 class="h2 h2-c">The Team Behind <span>Staffona</span></h2></div>
@@ -127,6 +134,36 @@
     </div>
   </div>
 </section>
+RESTORE_FOUNDER_PROFILE-->
+
+<!-- TEAM SECTION — shown while founder profile is temporarily hidden -->
+<section class="sec" style="background:var(--off)">
+  <div class="w">
+    <div class="sh sh-c rv">
+      <div class="lbl lbl-c">Our Team</div>
+      <h2 class="h2 h2-c">Built Around Egypt HR <span>Practitioners</span></h2>
+      <p class="sub sub-c" style="max-width:640px;margin:0 auto">We are not a staffing agency or a software platform. Every person at Staffona has hands-on experience with Egyptian payroll filings, Labor Office registrations, NOSI submissions, and the real-world compliance challenges that trip up foreign companies when they hire in Egypt.</p>
+    </div>
+    <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-top:40px">
+      <div class="rv feat" style="text-align:center;padding:28px 24px">
+        <div class="ic" style="margin:0 auto 14px"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></div>
+        <div class="name">Egyptian Labor Law — From the Inside</div>
+        <p style="font-size:13px;color:var(--sl);line-height:1.65;margin-top:6px">We have submitted real NOSI forms, attended Labor Office hearings, and navigated the Egyptian Tax Authority. This is not textbook knowledge — it is accumulated from doing the work for actual clients.</p>
+      </div>
+      <div class="rv feat" style="text-align:center;padding:28px 24px">
+        <div class="ic" style="margin:0 auto 14px"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><line x1="2" y1="12" x2="22" y2="12"/><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg></div>
+        <div class="name">Cross-Border Employment Experience</div>
+        <p style="font-size:13px;color:var(--sl);line-height:1.65;margin-top:6px">We have supported hires for companies based in the UK, UAE, Saudi Arabia, and the US — people who needed an Egyptian team member without a local entity. We know what questions they ask and what problems arise.</p>
+      </div>
+      <div class="rv feat" style="text-align:center;padding:28px 24px">
+        <div class="ic" style="margin:0 auto 14px"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14,2 14,8 20,8"/></svg></div>
+        <div class="name">Arabic and English — Both Sides of the Table</div>
+        <p style="font-size:13px;color:var(--sl);line-height:1.65;margin-top:6px">Contracts drafted in Arabic for local legal compliance. Reporting and communication in English for international clients. We bridge both worlds without the client needing to manage a translator or a local lawyer separately.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- VALUES -->
 <section class="sec">
