--- a/services.html
+++ b/services.html
@@ -77,6 +77,7 @@
     </ul>
     <div class="nav-r">
       <a href="mailto:info@staffona.com" class="nav-email">info@staffona.com</a>
+            <a href="ar.html" class="lang-btn" title="Arabic / العربية">🌐 AR</a>
       <button class="dm-btn" aria-label="Toggle dark mode">
         <svg class="dm-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
         <svg class="dm-sun" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/></svg>
@@ -217,8 +218,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">KR</div>
             <div class="tst-info">
-              <div class="tst-name">Khalid Al-Rashidi</div>
-              <div class="tst-role">Head of Engineering · Gulf Tech Solutions</div>
+              <div class="tst-name">Khalid R.</div>
+              <div class="tst-role">Head of Engineering · Gulf-Based Employer</div>
               <div class="tst-country">🇦🇪 Dubai, UAE</div>
             </div>
             <div class="tst-badge">Managed Employment</div>
@@ -230,8 +231,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">NF</div>
             <div class="tst-info">
-              <div class="tst-name">Nadia Farouk</div>
-              <div class="tst-role">Finance Director · Cairo Distribution Group</div>
+              <div class="tst-name">Nadia F.</div>
+              <div class="tst-role">Finance Director · Cairo-Based Business</div>
               <div class="tst-country">🇪🇬 Cairo, Egypt</div>
             </div>
             <div class="tst-badge">Compliance &amp; Payroll</div>
@@ -243,8 +244,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">JT</div>
             <div class="tst-info">
-              <div class="tst-name">James Thornton</div>
-              <div class="tst-role">CEO · DataBridge Ltd</div>
+              <div class="tst-name">James T.</div>
+              <div class="tst-role">Managing Director · UK Tech Company</div>
               <div class="tst-country">🇬🇧 London, UK</div>
             </div>
             <div class="tst-badge">Recruitment + EOR</div>
@@ -256,8 +257,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">AS</div>
             <div class="tst-info">
-              <div class="tst-name">Ahmed Sami</div>
-              <div class="tst-role">Managing Director · Vertex Logistics</div>
+              <div class="tst-name">Ahmed S.</div>
+              <div class="tst-role">Managing Director · Alexandria Business</div>
               <div class="tst-country">🇪🇬 Alexandria, Egypt</div>
             </div>
             <div class="tst-badge">Payroll Management</div>
@@ -269,8 +270,8 @@
           <div class="tst-footer">
             <div class="tst-avatar">TA</div>
             <div class="tst-info">
-              <div class="tst-name">Tariq Al-Omari</div>
-              <div class="tst-role">Operations Director · Al-Omari Holdings</div>
+              <div class="tst-name">Tariq A.</div>
+              <div class="tst-role">Operations Director · Saudi-Based Employer</div>
               <div class="tst-country">🇸🇦 Riyadh, Saudi Arabia</div>
             </div>
             <div class="tst-badge">HR Outsourcing</div>
